# Notebooks

./: .gitignore  CITATION.cff  Dockerfile  Juxtorpus-Demo.ipynb  README.md  pyproject.toml  requirements.old  requirements.txt
app/: JuxVisual.py  jux_error_msg.npz
data/ADO/: candidate_info.csv
