[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12.0"
juxtorpus = ">=0.3.1"
atap-corpus-slicer = ">=0.3.5,<0.4.0"
holoviews = ">=1.19.0,<1.20.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
